# autodock

./: .gitignore  AGENTS.md  AUDIT_FINDINGS.md  AUDIT_REPORT_2026-06-08.md  BENCHMARK_SUMMARY.md  CHANGELOG.md  CODING_STRATEGY.md  CONTRIBUTING.md  DESIGN_STRATEGY_Covalent_Multimer.md  FIX_REPORT_2026-06-08.md  LICENSE  MASTER_AUDIT_REPORT.md  METHODS.md  Molecular_Docking_Environment_Report.md  PHASE_REVIEW_2026-07-01.md  README.md  SCIENTIFIC_AUDIT_REPORT.md  cascade_analysis_report.md  environment-ci.yml  environment.yml  pyproject.toml  run_deep_sampling_parallel.py  run_p0_benchmark.py  test_library.txt
.github/workflows/: ci.yml
autodock/: __init__.py  __main__.py  alphafold_tools.py  analysis.py  benchmark.py  cache.py  cli.py  clustering.py  config.py  core.py  covalent.py  docking.py  fetchers.py  heatmap.py  interactions.py  md_simulation.py  minimization.py  pipeline.py  posebusters_eval.py  post_dock_pipeline.py  preparation.py  rendering.py  reporting.py  rescoring.py  utils.py  validation.py  validation_params.py  workflow.py
autodock/tests/: __init__.py  test_alphafold_tools.py  test_analysis.py  test_benchmark.py  test_cache.py  test_cli.py  test_clustering.py  test_config.py  test_core.py  test_covalent.py  test_docking.py  test_fetchers.py  test_heatmap.py  test_interactions.py  test_md_simulation.py  test_minimization.py  test_pipeline.py  test_posebusters_eval.py  test_preparation.py  test_rendering.py  test_reporting.py  test_rescoring.py  test_utils.py  test_utils_extended.py  test_validation.py  test_validation_params.py  test_vina_integration.py  test_workflow.py
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
local_knowledge/: gotchas.md
mettl8_docking/: run_docking.py
test_data/: N3_ideal.sdf
