[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodock"
version = "1.0.0"
description = "Publication-grade molecular docking automation pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Autodock Contributors"},
]
keywords = [
    "molecular-docking",
    "virtual-screening",
    "drug-discovery",
    "autodock-vina",
    "chemoinformatics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "Pillow>=10.0",
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "pubchempy>=1.0",
]

[project.optional-dependencies]
docking = [
    "vina>=1.2.0",
    "rdkit>=2023.03",
    "meeko>=0.6.0",
    "psutil>=5.9",  # memory-aware worker scaling for multi-conformer docking
]
analysis = [
    "plip>=2.3.0",
    "MDAnalysis>=2.6.0",
    "prolif>=2.0.0",
]
md = [
    "openmm>=8.1",
    "openmmforcefields>=0.12",
]
validation = [
    "posebusters>=0.2.0",
]
vis = [
    "pymol-open-source>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "black>=24.0",
    "mypy>=1.9",
]
all = [
    "autodock[docking,analysis,md,validation,vis,dev]",
]

[project.scripts]
autodock = "autodock.cli:main"

[project.urls]
Homepage = "https://github.com/tianhuarong/autodock"
Documentation = "https://github.com/tianhuarong/autodock#readme"
Repository = "https://github.com/tianhuarong/autodock"
Issues = "https://github.com/tianhuarong/autodock/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["autodock*"]
exclude = ["tests*", "test_data*", "docs*"]

# ─────────────────────────────────────────────────────────────────────────────
# pytest
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["autodock/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=autodock",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=60",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external tools",
    "requires_vina: marks tests requiring AutoDock Vina",
    "requires_rdkit: marks tests requiring RDKit",
]
filterwarnings = [
    # MDAnalysis internal import point deprecated in 2.8.0; not actionable
    "ignore::DeprecationWarning:MDAnalysis.topology.tables",
]

# ─────────────────────────────────────────────────────────────────────────────
# coverage
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["autodock"]
omit = [
    "autodock/tests/*",
    "autodock/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ─────────────────────────────────────────────────────────────────────────────
# ruff
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # exception chaining — verbose for this codebase; enable later
    "N806",  # variable names in function (math notation: P, Q, R, H, etc.)
    "N803",  # argument names (math notation)
    "N802",  # function naming (test methods with descriptive names)
    "N813",  # camelcase imports (MDAnalysis as mda is idiomatic)
    "SIM117", # nested with statements (sometimes clearer)
    "SIM115", # context manager for files (false positives with try/finally + delete=False)
    "B023",   # loop variable in closure (only 2 instances, not bugs)
]

[tool.ruff.lint.per-file-ignores]
"autodock/tests/*" = ["S101"]

# ─────────────────────────────────────────────────────────────────────────────
# black
# ─────────────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

# ─────────────────────────────────────────────────────────────────────────────
# mypy
# ─────────────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "autodock/tests",
    "test_data",
]
